--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ostro/support",
-  "version": "0.0.0-alpha.4",
+  "version": "1.0.0",
   "description": "Support for OstroJS",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
